--- a/v3.new/_locales/es/messages.json
+++ b/v3.new/_locales/es/messages.json
@@ -1,5 +1,5 @@
 {
   "description": {
-    "message": "Una poderosa herramienta de búsqueda e indexación fuera de línea para encontrar términos coincidentes en el título y el contenido de la pestaña"
+    "message": "Una herramienta potente de indexación y búsqueda offline para encontrar términos en los títulos y contenidos de las pestañas."
   }
 }
