--- a/v3.new/_locales/fr/messages.json
+++ b/v3.new/_locales/fr/messages.json
@@ -1,5 +1,5 @@
 {
   "description": {
-    "message": "Un puissant outil d'indexation et de recherche hors ligne pour trouver les termes correspondants dans le titre et le contenu de l'onglet"
+    "message": "Un outil puissant d'indexation et de recherche hors ligne pour trouver des termes dans les titres et contenus des onglets."
   }
 }
