--- a/v3.new/_locales/it/messages.json
+++ b/v3.new/_locales/it/messages.json
@@ -1,5 +1,5 @@
 {
   "description": {
-    "message": "Un potente strumento di indicizzazione e ricerca offline per trovare i termini corrispondenti nel titolo e nel contenuto della scheda"
+    "message": "Uno strumento potente di indicizzazione e ricerca offline per trovare termini corrispondenti nei titoli e contenuti delle schede."
   }
 }
