--- a/v3.new/_locales/pl/messages.json
+++ b/v3.new/_locales/pl/messages.json
@@ -1,5 +1,5 @@
 {
   "description": {
-    "message": "Potężne narzędzie do indeksowania i wyszukiwania w trybie offline, umożliwiające znajdowanie pasujących terminów w tytule i treści karty"
+    "message": "Potężne narzędzie do indeksowania i wyszukiwania offline, które pozwala znaleźć pasujące terminy w tytułach i treści kart."
   }
 }
