--- a/v3.new/_locales/el/messages.json
+++ b/v3.new/_locales/el/messages.json
@@ -1,5 +1,5 @@
 {
   "description": {
-    "message": "Ένα ισχυρό εργαλείο ευρετηρίασης και αναζήτησης εκτός σύνδεσης για την εύρεση όρων αντιστοίχισης στον τίτλο και το περιεχόμενο της καρτέλας"
+    "message": "Ένα ισχυρό εργαλείο εκτός σύνδεσης για ευρετηρίαση και αναζήτηση όρων στους τίτλους και το περιεχόμενο των καρτελών."
   }
 }
